--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
 version: '3.8'
 
 services:
+  db:
+    image: postgres
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    ports:
+      - '5432:5432'
+    expose:
+      - 5432
+    restart: always
+
   rabbitmq:
     image: 'rabbitmq:3.6-management-alpine'
     ports:
@@ -15,6 +27,8 @@ services:
       - ./producer:/app
     environment:
       - PYTHONUNBUFFERED=1
+    depends_on:
+      - multiplier
 
   multiplier:
     build:
@@ -24,3 +38,5 @@ services:
       - ./worker:/app
     environment:
       - PYTHONUNBUFFERED=1
+    depends_on:
+      - db
